# open-jockey

./: .editorconfig  .gitignore  README.md
.github/workflows/: ci.yml
backend/: README.md  pyproject.toml
backend/aidj/: __init__.py  candidate_graph.py  cli.py  config.py  logging_config.py  profile_builder.py  transition_renderer.py
backend/aidj/api/: __init__.py  main.py
backend/aidj/audio/: __init__.py  peaks.py
backend/aidj/plugins/: __init__.py  manifest.py  registry.py  runtime.py
backend/aidj/store/: __init__.py  _timestamps.py  analysis_labels.py  analysis_runs.py  cache.py  candidates.py  db.py  hashing.py  jobs.py  models.py  projects.py  render_artifacts.py  render_labels.py  track_profiles.py  tracks.py
backend/tests/: conftest.py  test_analysis_labels.py  test_analysis_runs.py  test_analyze_api.py  test_api.py  test_audit_fixes.py  test_cache.py  test_candidate_graph.py  test_claim_running.py  test_cli.py  test_cloud_audio_gate.py  test_db_locking.py  test_peaks.py  test_plugins.py  test_profile_builder.py  test_public_contracts.py  test_render_api.py  test_render_store.py  test_store.py  test_track_profiles.py  test_transition_renderer.py
backend/tests/fixtures/: __init__.py  audio.py
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.test.ts  api.ts  index.css
frontend/src/components/: RenderPanel.tsx  TransitionGraphSection.tsx  Waveform.test.tsx  Waveform.tsx  ui.tsx
frontend/src/lib/: format.test.ts  format.ts  labels.test.ts  labels.ts
frontend/src/pages/: LibraryPage.test.tsx  LibraryPage.tsx  TrackDetailPage.test.tsx  TrackDetailPage.tsx
plugin_sdk/: README.md  pyproject.toml
plugin_sdk/aidj_plugin_sdk/: __init__.py  serve.py
plugins/: README.md
plugins/allin1/: manifest.yaml  pyproject.toml
plugins/allin1/allin1_plugin/: __init__.py  __main__.py
plugins/allin1_remote/: manifest.yaml  pyproject.toml
plugins/allin1_remote/allin1_remote_plugin/: __init__.py  __main__.py
plugins/allin1_remote/modal_worker/: analyze.py  requirements.txt
plugins/echo/: manifest.yaml  pyproject.toml
plugins/echo/echo_plugin/: __init__.py  __main__.py
plugins/essentia/: manifest.yaml  pyproject.toml
plugins/essentia/essentia_plugin/: __init__.py  __main__.py
plugins/librosa/: manifest.yaml  pyproject.toml
plugins/librosa/librosa_plugin/: __init__.py  __main__.py
plugins/madmom_msaf/: README.md  manifest.yaml.disabled  pyproject.toml
plugins/madmom_msaf/madmom_msaf_plugin/: __init__.py  __main__.py
