[project]
name = "aidj"
version = "0.1.0"
description = "Personal local-first AI DJ — analyzer, planner, renderer"
readme = "../README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "aiofiles>=24.1",
    "pyyaml>=6.0.3",
    # Used by the peaks endpoint to downsample PCM into waveform amplitudes.
    # ffmpeg/ffprobe (system binaries) are still required at runtime.
    "numpy>=2.0",
]

[project.scripts]
aidj = "aidj.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aidj"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
