[project]
name = "aidj-plugin-sdk"
version = "0.1.0"
description = "Stdio JSON-RPC loop shared by every aidj plugin."
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aidj_plugin_sdk"]
