[project]
name = "allin1-plugin"
version = "0.1.0"
description = "all-in-one music analyzer plugin for open-jockey"
requires-python = ">=3.10,<3.13"
dependencies = [
    "aidj-plugin-sdk",
    # Pin allin1 exactly so behaviour is reproducible AND matches the Modal
    # worker (plugins/allin1_remote/modal_worker/analyze.py). Bump in lock-step.
    "allin1==1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["allin1_plugin"]

[tool.uv.sources]
aidj-plugin-sdk = { path = "../../plugin_sdk", editable = true }
