[project]
name = "allin1-remote-plugin"
version = "0.1.0"
description = "Modal-backed remote allin1 analyzer for open-jockey"
requires-python = ">=3.10"
dependencies = [
    "aidj-plugin-sdk",
    "modal>=0.64",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["allin1_remote_plugin"]

[tool.uv.sources]
aidj-plugin-sdk = { path = "../../plugin_sdk", editable = true }
