[project]
name = "echo-plugin"
version = "0.1.0"
description = "Echo plugin — RPC smoke test"
requires-python = ">=3.11"
dependencies = ["aidj-plugin-sdk"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["echo_plugin"]

[tool.uv.sources]
aidj-plugin-sdk = { path = "../../plugin_sdk", editable = true }
