[project]
name = "librosa-plugin"
version = "0.1.0"
description = "librosa baseline beat/segmentation plugin for open-jockey"
requires-python = ">=3.10,<3.13"
dependencies = [
    "aidj-plugin-sdk",
    # 0.10 is where beat_track started returning tempo as np.ndarray (handled
    # defensively in __main__.py). Cap below 0.12 so a future API break doesn't
    # silently land via `uv lock --upgrade`.
    "librosa>=0.10,<0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["librosa_plugin"]

[tool.uv.sources]
aidj-plugin-sdk = { path = "../../plugin_sdk", editable = true }
